fixing overflow scrolling & making read more button clickable

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
+/* GENERAL START */
 
 @font-face {
-font-family: FuturaBold;
-src: url(fonts/FuturaBold.otf);
+  font-family: FuturaBold;
+  src: url(fonts/FuturaBold.otf);
 }
 body {
     margin: 0;
@@ -10,16 +11,36 @@ body {
     padding-bottom: 3em;
 }
 
+
+text {
+   font-size: 1.5em;
+
+}
+.center {
+  text-align: center;
+}
+
+#main-window {
+  height: 824px;
+  overflow-x: hidden;
+}
+
+
+#chart-container {
+  height: 100% ;
+  overflow-x: auto;
+}
+
+
+/* GENERAL END */
+
+/* NAV START */
 nav {
   position: absolute;
   top: 0;
   width: 100%;
   background-color: white;
   z-index: 1;
-}
-
-text {
-   font-size: 30px;
 }
 
 #logo {
@@ -30,20 +51,11 @@ text {
 .navbar {
   padding: 1em;
 }
-.svg-container {
-  overflow: scroll;
-  margin-top: -.55em;
 
-}
+/* NAV END */
 
 
-
-
-
-#main-window {
-/*  height: 500px;*/
-  overflow: hidden;
-}
+/* TIMELINE START */
 
 .axis-y {
   fill: none;
@@ -53,69 +65,59 @@ text {
   color: #3A3A3A;
 }
 
-
-
-
-
-#info {
-  margin-top: 32px;
-}
-
-.event-title {
-  font-family: FuturaBold;
+.node-label {
+  font-size: .65rem;
   color: #3A3A3A;
 }
-.event-description {
-  font-size: 20px;
-  margin-bottom: 2rem;
-}
 
-.right-align-container {
-  width: 100%;
-  text-align: right;
+
+/* EVENT INFO START */
+#info {
+  margin-top: 32px;
 }
 .center-align-container {
   width: 100%;
   text-align: center;
 }
+
+.event-title {
+  font-family: FuturaBold;
+  color: #3A3A3A;
+
+}
+.event-description {
+  font-size: 20px;
+  margin-bottom: 2rem;
+}
 .event-date {
   font-family: 'Open Sans';
   font-size: 30px;
-}
-
-
-
-
+} 
 .read-more-button {
   color: #3A3A3A;;
-/*  border-color: #427499; 
-    background: white; */
   border-color: black;
   border-style: solid;
   border-width: .04rem;
   border-radius: 8px;
   padding: 1em 2rem;
   color: #3A3A3A;
+  visibility: hidden;
 }
 
-
-
-
-
-#chart {
-  overflow: hidden;
+.read-more-button:hover {
+  text-decoration: none;
+  color: #AF0015;
 }
-.node-label {
-  font-size: .65rem;
-  color: #3A3A3A;
-}
+
+/* EVENT INFO END */
+
+
+/* FOOTER START */
 
 #footer {
-
   width: 100%;
-}
-.center {
-  text-align: center;
+  position: absolute;
+  top: 95%;
 }
 
 .action-link {
@@ -126,5 +128,24 @@ text {
   text-align: center;
   margin-right: 1em;
   margin-top: 1em;
+  color: #3A3A3A;
 }
 
+.action-link:hover {
+  text-decoration:none;
+  color: #AF0015;
+}
+
+/* FOOTER END */
+
+
+/* Hide Scrollbar */
+
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
